connections and fixing some styles

--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -39,10 +39,10 @@
                   <mat-icon>settings</mat-icon>
                   <span>Web Services Summary</span>
               </button>
-            <button *ngIf="globals.currentApplication != 'conn'" mat-menu-item (click)="getOption('conn')">
+            <!-- <button *ngIf="globals.currentApplication != 'conn'" mat-menu-item (click)="getOption('conn')">
                 <mat-icon>settings</mat-icon>
                 <span>Admin Connections</span>
-            </button>
+            </button> -->
 
         </mat-menu>
 
