--- a/src/styles.sass
+++ b/src/styles.sass
@@ -26,12 +26,12 @@
 
 body
     background-color: #1e1e1e
-    // background-image: url("assets/images/fondo.png") 
+    // background-image: url("assets/images/fondo.png")
     font-family: $msf-font-family
     font-size: $msf-font-size
     margin: 0
     overflow-x: hidden
-    overflow-y: hidden
+    overflow-y: auto
 
 // kp20190423
 .application-class
@@ -115,7 +115,7 @@ body
 .msf-header-icons
     display: flex
     flex-direction: row
-    align-items: center    
+    align-items: center
     justify-content: flex-end
     width: calc(85% - 20px)
 
@@ -949,10 +949,9 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
     color: $msf-secondary-color!important
 
 .general-container
-    width: calc(100% - 60px)
-    background-color: $msf-primary-color    
-    height: calc(100vh - 90px)
-    padding: 0px 30px
+    width: 100%
+    background-color: $msf-primary-color
+
 
 /*Menu*/
 .msf-menu-header
@@ -963,11 +962,11 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
     display: flex
     flex-direction: row
     max-height: 60px
-    align-items: center    
+    align-items: center
     max-width: 100%
     min-width: 100%
 
-.msf-menu-header-image-container 
+.msf-menu-header-image-container
     width: 15%
     height: 100%
     max-height: 60px
@@ -979,7 +978,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
     background-color: $msf-primary-light-color
     align-items: center
     padding: 0px 10px
-    vertical-align: middle	
+    vertical-align: middle
 
 .msf-menu-logo
     width: 70%
@@ -1006,7 +1005,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
 .msf-menu-container
     height: 100%
     vertical-align: middle
-    display: flex							
+    display: flex
     width: 60%
     text-align: center
     flex-direction: row
@@ -1439,8 +1438,8 @@ app-msf-airport
 // .mat-table kp20190517
 //     background: black
 
-// .mat-cell
-//     font-size: 90%
+.mat-cell
+    font-size: 12px
 
 td.mat-cell, td.mat-footer-cell, th.mat-header-cell
     text-align: center
@@ -3281,7 +3280,14 @@ img.msf-calendar-image
     font-weight: 500
     font-size: 24px
     padding: 30px
-    width: 45px
+    width: 100%
+
+.ws-url
+  flex: 1
+  font-size: 12px
+  padding-top: 5px
+  padding-bottom: 0px
+  width: 100%
 
 .activation-form input
     color: white !important
@@ -3312,7 +3318,7 @@ img.msf-calendar-image
     display: none
 
 
-div 
+div
     color: white
     // font-size: 14px reviasr como cambiarlo kp20190517
 
@@ -3386,7 +3392,7 @@ div
     flex-wrap: wrap
     max-height: 350px
     height: 350px
-    overflow-y: scroll
+    overflow-y: hidden !important
     margin-top: 10px
     width: 90%
     padding-left: 10px
@@ -3412,7 +3418,6 @@ div
 .selected-objects
     background-color: #333333
     height: 20px
-    margin-bottom: 5px
     margin-right: 5px
     padding: 3px
     color: white
@@ -3525,7 +3530,7 @@ textarea.mat-input-element
 
 
 .titles-large
-    font-size: 20px
+    font-size: 18px
     background-color: #1e1e1e
     padding: 5px
 
@@ -3542,7 +3547,7 @@ textarea.mat-input-element
     display: flex
     flex-direction: row
     align-items: center
-    background-color: #232323 
+    background-color: #232323
     height: calc(100% - 50px)
     padding: 30px 50px 60px 60px
 
@@ -3650,7 +3655,7 @@ textarea.mat-input-element
     color: white
     .mat-header-cell
         border: 0px
-    tr.mat-header-row 
+    tr.mat-header-row
         height: 56px
         background: #1e1e1e
     .mat-cell, .mat-footer-cell
