--- a/src/app/all-web-services/all-web-services.component.html
+++ b/src/app/all-web-services/all-web-services.component.html
@@ -47,7 +47,7 @@
                     </td>
                 </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
+                <tr mat-header-row style="background-color: #1e1e1e" *matHeaderRowDef="displayedColumns; sticky:true"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
         </div>
