--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -1,5 +1,5 @@
 .test-container {
-    height: 400px;
+    max-height: calc(100% - 35px);
     overflow: auto;
 }
 
@@ -51,7 +51,7 @@ th.mat-header-cell {
 }
 
 .header-test {
-    height: 110px;
+    /* height: 110px; */
     margin-bottom: 40px;
     display: flex;
     flex-direction: column;
